Closed
Bug 1603921
Opened 6 years ago
Closed 6 years ago
[mips] Implement branchTruncate{Double, Float32}ToInt32
Categories
(Core :: JavaScript Engine: JIT, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox73 | --- | fixed |
People
(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Fedora; Linux mips64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
Run jit-test on MIPS64 machine
Actual results:
Failed on basic/array-copyWithin
, because branchTruncateDoubleToInt32
function is unimplemented on MIPS.
Expected results:
Pass the test.
Assignee | ||
Updated•6 years ago
|
Summary: [mips] Implement branchTruncateDoubleToInt32 and branchTruncateFloatToInt32 → [mips] Implement branchTruncateDoubleToInt32 and branchTruncateFloat32ToInt32
Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → zhaojiazhong-hf
Assignee | ||
Updated•6 years ago
|
Summary: [mips] Implement branchTruncateDoubleToInt32 and branchTruncateFloat32ToInt32 → [mips] Implement branchTruncate{Double, Float32}ToInt32
Updated•6 years ago
|
Priority: -- → P3
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed-tb
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed-tb
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6d19bb4422f5
[MIPS] Implement branchTruncate{Double, Float32}ToInt32. r=jandem
Comment 3•6 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in
before you can comment on or make changes to this bug.
Description
•