Bug 1603921: [MIPS] Implement branchTruncate{Double, Float32}ToInt32. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D57195